@@ -14,6 +14,9 @@
 + new =with_default_config= helper for installing a program
   with the default configuration
 
++ support for =version current= command with Arch Linux
+  configuration
+
 *** Xmobar
 
 + battery percentage will now display in red if it drops to
